--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -144,7 +144,7 @@ body {
   display: grid;
   height: 65px;
   grid-template-columns: 1fr 2fr 1fr;
-  background-color: #1c1e21;
+  background-color: variables.$partido;
   padding: 5px 15px 5px 0;
   border-radius: 5px;
   transition-duration: 600ms;
@@ -283,7 +283,7 @@ section#Gasto,section#Ingreso,section#Ahorros {
       display: flex;
      justify-content: center;
       .balance{
-        background-color: #1c1e21;
+        background-color: variables.$partido;
         padding: 10px 15px;
         position: fixed;
         border-radius: 5px;
