--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -349,7 +349,7 @@ section#Inicio {
     }
   }
   .title-section {
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     margin: 30px 15px 0 15px;
   }
