--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -31,6 +31,77 @@
 @use "@material/checkbox";
 @use "@material/form-field";
 
+
+//Tarjeta Partido
+@use "@material/card";
+
+@include card.core-styles;
+
+.mdc-card__actions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    min-height: 52px;
+    padding: 8px;
+}
+
+// Estilo del Margen
+.mdc-card--outlined {
+  box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 20%), 0px 0px 0px 0px rgb(0 0 0 / 14%), 0px 0px 0px 0px rgb(0 0 0 / 12%);
+  border-width: 1px;
+  border-style: solid;
+  border-color: #e0e0e0;
+  margin: 10px;
+}
+
+  //Sacado del m2
+.my-card-content {
+  padding: 16px;
+}
+
+  //Sacado del m2
+.my-card {
+  height: 350px;
+  width: 350px;
+}
+
+//El titulo
+.demo-card__title {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  font-weight: 500;
+  letter-spacing: .0125em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.mdc-card-wrapper__text-section:first-child, .mdc-card__media+.mdc-card-wrapper__text-section {
+  padding-top: 16px;
+}
+.mdc-card-wrapper__text-section {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+//Fecha
+.demo-card__subhead {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: .875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  letter-spacing: .0178571429em;
+  text-decoration: inherit;
+  text-transform: inherit;
+  opacity: .6;
+}
+//Nuestro fin
+
 @include checkbox.core-styles;
 @include form-field.core-styles;
 @include fab.core-styles;
@@ -41,15 +112,7 @@
 @include textfield.core-styles;
 
 body {
-    background-color: variables.$background-dark;
-    margin: 0;
-    font-family: variables.$fontFamily;
-    display: flex;
-    height: 100vh;
-    a {
-      text-decoration: none;
-      color: white;
-    }
+
 }
 
 // Desktop
