--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -11,14 +11,6 @@
 @use "@material/drawer";
 @use "@material/list";
 @use "@material/fab";
-@use "@material/tab-bar/mdc-tab-bar";
-@use "@material/tab-bar";
-@use "@material/tab-scroller/mdc-tab-scroller";
-@use "@material/tab-indicator/mdc-tab-indicator";
-@use "@material/tab-scroller";
-@use "@material/tab-indicator";
-@use "@material/tab/mdc-tab";
-@use "@material/tab";
 @use "@material/floating-label/mdc-floating-label";
 @use "@material/line-ripple/mdc-line-ripple";
 @use "@material/notched-outline/mdc-notched-outline";
@@ -31,6 +23,16 @@
 @use "@material/checkbox";
 @use "@material/form-field";
 
+
+//Tabs
+@use "@material/tab-bar/mdc-tab-bar";
+@use "@material/tab-scroller/mdc-tab-scroller";
+@use "@material/tab-indicator/mdc-tab-indicator";
+@use "@material/tab/mdc-tab";
+@use "@material/tab-bar";
+@use "@material/tab-scroller";
+@use "@material/tab-indicator";
+@use "@material/tab";
 
 //Tarjeta Partido
 @use "@material/card";
