--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -47,6 +47,12 @@
   display: none;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 
 .mdc-card__actions {
   display: flex;
