--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -11,10 +11,6 @@
 @use "@material/drawer";
 @use "@material/list";
 @use "@material/fab";
-@use "@material/floating-label/mdc-floating-label";
-@use "@material/line-ripple/mdc-line-ripple";
-@use "@material/notched-outline/mdc-notched-outline";
-@use "@material/textfield";
 @use "@material/list/mdc-list";
 @use "@material/menu-surface/mdc-menu-surface";
 @use "@material/menu/mdc-menu";
@@ -22,6 +18,13 @@
 @use '@material/select';
 @use "@material/checkbox";
 @use "@material/form-field";
+
+//Text Fields
+@use "@material/floating-label/mdc-floating-label";
+@use "@material/line-ripple/mdc-line-ripple";
+@use "@material/notched-outline/mdc-notched-outline";
+@use "@material/textfield";
+
 
 
 //Tabs
@@ -38,6 +41,7 @@
 @use "@material/card";
 
 @include card.core-styles;
+@include textfield.core-styles;
 
 .show {
   display: block;
