--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -135,7 +135,10 @@
 @include list.deprecated-core-styles;
 @include textfield.core-styles;
 
-body {}
+body {
+  margin: 0px;
+  padding: 0px;
+}
 
 // Desktop
 @media only screen and (min-width: 768px) {}
