--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -50,6 +50,18 @@ img.emoji {
   vertical-align: -0.1em;
 }
 
+section#Pantalla{
+  -webkit-transition: width 1s ease-in-out;
+    -moz-transition: width 1s ease-in-out;
+    -o-transition: width 1s ease-in-out;
+    transition: width 1s ease-in-out;
+
+  margin: auto;
+  width: 95%;
+  text-align: center;
+
+}
+
 .show {
   display: block;
 }
@@ -75,8 +87,7 @@ img.emoji {
 }
 
 // Estilo del Margen
-.mdc-card--outlined {
-  box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 20%), 0px 0px 0px 0px rgb(0 0 0 / 14%), 0px 0px 0px 0px rgb(0 0 0 / 12%);
+.mdc-card {
   border-width: 1px;
   border-style: solid;
   border-color: #e0e0e0;
@@ -165,4 +176,11 @@ body {
 }
 
 // Desktop
-@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 768px) {
+  section#Pantalla{
+    margin: auto;
+    width: 50%;
+    text-align: center;
+  
+  }
+}
