--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -43,6 +43,17 @@
 @include card.core-styles;
 @include textfield.core-styles;
 
+
+//@import url(https://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap%27);
+
+$fontFamily : 'Roboto ',  sans-serif;
+
+*{
+  font-family: $fontFamily;
+
+}
+
 img.emoji {
   height: 1em;
   width: 1em;
@@ -59,7 +70,10 @@ section#Pantalla{
   margin: auto;
   width: 95%;
   text-align: center;
-
+h1{ font-size:40px;
+  color: #1B5E20;
+  
+}
 }
 
 .show {
@@ -107,7 +121,7 @@ section#Pantalla{
 
 //El titulo
 .demo-card__title {
-  font-family: Roboto, sans-serif;
+  //font-family: Roboto, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-size: 1.25rem;
