--- a/src/interfaz/src/styles/index.scss
+++ b/src/interfaz/src/styles/index.scss
@@ -188,16 +188,25 @@ h1{ font-size:40px;
   text-align: center;
   background-color: #1B5E20;
   color: #FFFFFF;
-  //font-weight: bold;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#textPuntaje{
+  font-size: 30px;
+  color: #FFFFFF;
+  font-weight: bold;
 }
 
 #zonaPuntaje {
   font-family: unquote("Roboto");
-  font-size: 2rem;
+  font-size: 50px;
   text-align: center;
   background-color: #4C8C4A;
   color: #FFFFFF;
   border: #4C8C4A;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 //Nuestro fin
